# jupyter

./: README.md  pyproject.toml
MindMaps/: .env  International_Space_Station.md  Jupyter.py  Space.md
MindMaps/Space/: AstronomyPhotoOfTheDay.md  CoronalMassEjections.md  EPIC_Natural.md  GeomagneticStorms.md  HighSpeedStreams.md  ISS.md  InterplanetaryShock.md  Known_Count.md  MagnetopauseCrossings.md  NaturalEvents.md  NearEarthObjects.md  Notifications.md  People.md  Planets.md  RadiationBeltEnhancements.md  SolarEnergeticParticles.md  SolarFlares.md  Space.md  WSAEnlilSimulations.md  WeatherOnMars.md
MindMaps/Templates/: apod.j2  epicNat.j2  gst.j2  hss.j2  ips.j2  iss.j2  knownCount.j2  mpc.j2  natural.j2  people.j2  planets.j2  sep.j2  space.j2  weatherOnMars.j2
src/jupyter_mindmaps/: jupyter_mindmaps.py  script.py
src/jupyter_mindmaps/Templates/: cme.j2  flr.j2  iss.j2  neo.j2  notification.j2  people.j2  rbe.j2  wsa.j2
